--- a/vilga/tests/CMakeLists.txt
+++ b/vilga/tests/CMakeLists.txt
@@ -1,3 +1,3 @@
-
 add_executable(vilga_test vilga_test.cpp)
 target_link_libraries(vilga_test PRIVATE vilga::vilga doctest::doctest)
+add_test(test_vilga_test vilga_test)
