Create a prototype for api type - portal_spell
It provides single type for portal function entry with user/vilga provided conversion with deferred execution.

Update all use cases and comment out code which needs rethinking.

--- a/vilga/tests/CMakeLists.txt
+++ b/vilga/tests/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_executable(vilga_test vilga_test.cpp)
 target_link_libraries(vilga_test PRIVATE vilga::vilga doctest::doctest)
 add_test(test_vilga_test vilga_test)
+
+add_executable(spell_test spell_test.cpp)
+target_link_libraries(spell_test PRIVATE vilga::vilga doctest::doctest)
+add_test(test_spell spell_test)
