--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -149,7 +149,7 @@ jobs:
           ProcessorCount(N)
 
           execute_process(
-            COMMAND ${{ steps.cmake_and_ninja.outputs.cmake_dir }}/ctest -j ${N}
+            COMMAND ${{ steps.cmake_and_ninja.outputs.cmake_dir }}/ctest -V -j ${N}
             WORKING_DIRECTORY build
             RESULT_VARIABLE result
           )
